@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-10-21T01:11:08Z",
-  "count_outdated" : 244,
-  "uniques_outdated" : 178,
+  "timestamp" : "2024-10-28T01:12:20Z",
+  "count_outdated" : 245,
+  "uniques_outdated" : 179,
   "count" : 246,
   "uniques" : 180,
   "clones" : [
-    {
-      "timestamp": "2024-10-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-10-20T00:00:00Z",
       "count": 1,
